Updated to work with LazyMagic V1.4.0
