# ClientSDKs/StoreApi/openapi.g.yaml
@@ -1,153 +1,10 @@
 openapi: 3.0.1
 paths:
-  /callerInfo:
-    get:
-      operationId: callerInfo
-      responses:
-        200:
-          description: successful operation
-          content:
-            text/plain:
-              schema:
-                type: string
-  /test:
-    get:
-      summary: Test
-      operationId: testEmployee
-      x-lz-gencall: Task.FromResult("Hello World")
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: string
-        206:
-          description: successful operation, partial return
-          content:
-            application/json:
-              schema:
-                type: string
-  /pet:
-    post:
-      summary: Add a new pet to the store
-      operationId: addPet
-      x-lz-gencall: petRepo.CreateAsync(callerInfo, body)
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Pet'
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Pet'
-        405:
-          description: Invalid input
-    put:
-      summary: Update an existing pet
-      operationId: updatePet
-      x-lz-gencall: petRepo.UpdateAsync(callerInfo, body)
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Pet'
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Pet'
-        400:
-          description: Invalid ID supplied
-        404:
-          description: Pet not found
-        405:
-          description: Validation exception
-  /order/inventory:
-    get:
-      summary: Returns pet inventories by status
-      description: Returns a map of status codes to quantities
-      operationId: getInventory
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: integer
-                  format: int32
-  /order:
-    post:
-      summary: Place an order for a pet
-      operationId: placeOrder
-      x-lz-gencall: orderRepo.CreateAsync(callerInfo, body)
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Order'
-        description: order placed for purchasing the pet
-        required: true
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        400:
-          description: Invalid Order
-  /preferences:
-    get:
-      summary: Get user preferences
-      operationId: getPreferences
-      x-lz-gencall: preferencesRepo.ReadAsync(callerInfo, callerInfo.LzUserId)
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Preferences'
-    post:
-      summary: Update user preferences
-      operationId: updatePreferences
-      x-lz-gencall: preferencesRepo.UpdateAsync(callerInfo, body)
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Preferences'
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Preferences'
-  /publicTest:
-    get:
-      operationId: publicTest
-      responses:
-        200:
-          description: successful operation
-          content:
-            text/plain:
-              schema:
-                type: string
   /pet/listPets:
     get:
       summary: List all pets
       operationId: listPets
-      x-lz-gencall: petRepo.ListAsync(callerInfo)
+      x-lz-gencall: PetRepo.ListAsync(callerInfo)
       responses:
         200:
           description: successful operation
@@ -186,6 +43,47 @@ paths:
                   $ref: '#/components/schemas/Pet'
         400:
           description: Invalid status value
+  /pet:
+    post:
+      summary: Add a new pet to the store
+      operationId: addPet
+      x-lz-gencall: PetRepo.CreateAsync(callerInfo, body)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        405:
+          description: Invalid input
+    put:
+      summary: Update an existing pet
+      operationId: updatePet
+      x-lz-gencall: PetRepo.UpdateAsync(callerInfo, body)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        400:
+          description: Invalid ID supplied
+        404:
+          description: Pet not found
+        405:
+          description: Validation exception
   /pet/findByTags:
     get:
       summary: Finds Pets by tags
@@ -216,7 +114,7 @@ paths:
     get:
       summary: Get all Pet Categories
       operationId: getPetCategories
-      x-lz-gencall: categoryRepo.ListAsync(callerInfo)
+      x-lz-gencall: CategoryRepo.ListAsync(callerInfo)
       responses:
         200:
           description: successful operation
@@ -230,7 +128,7 @@ paths:
     get:
       summary: Get all Pet Tags
       operationId: getPetTags
-      x-lz-gencall: tagRepo.ListAsync(callerInfo)
+      x-lz-gencall: TagRepo.ListAsync(callerInfo)
       responses:
         200:
           description: successful operation
@@ -240,12 +138,215 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Tag'
+  /order/inventory:
+    get:
+      summary: Returns pet inventories by status
+      description: Returns a map of status codes to quantities
+      operationId: getInventory
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: integer
+                  format: int32
+  /order:
+    post:
+      summary: Place an order for a pet
+      operationId: placeOrder
+      x-lz-gencall: OrderRepo.CreateAsync(callerInfo, body)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Order'
+        description: order placed for purchasing the pet
+        required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        400:
+          description: Invalid Order
+  /preferences:
+    get:
+      summary: Get user preferences
+      operationId: getPreferences
+      x-lz-gencall: PreferencesRepo.ReadAsync(callerInfo, callerInfo.LzUserId)
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Preferences'
+    post:
+      summary: Update user preferences
+      operationId: updatePreferences
+      x-lz-gencall: PreferencesRepo.UpdateAsync(callerInfo, body)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Preferences'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Preferences'
+  /public/pet/listPets:
+    get:
+      summary: List all pets
+      operationId: listPets
+      x-lz-gencall: PetRepo.ListAsync(callerInfo)
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        400:
+          description: Invalid status value
+  /public/pet/findByStatus:
+    get:
+      summary: Finds Pets by status
+      description: Multiple status values can be provided with comma separated strings
+      operationId: findPetsByStatus
+      parameters:
+      - name: petStatus
+        in: query
+        description: Status values that need to be considered for filter
+        required: true
+        explode: true
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/PetStatus'
+          default: available
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        400:
+          description: Invalid status value
+  /public/pet/findByTags:
+    get:
+      summary: Finds Pets by tags
+      description: Muliple tags can be provided with comma separated strings. Use\ \ tag1, tag2, tag3 for testing.
+      operationId: findPetsByTags
+      parameters:
+      - name: tags
+        in: query
+        description: Tags to filter by
+        required: true
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        400:
+          description: Invalid tag value
+  /public/pet/categories:
+    get:
+      summary: Get all Pet Categories
+      operationId: getPetCategories
+      x-lz-gencall: CategoryRepo.ListAsync(callerInfo)
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+  /public/pet/tags:
+    get:
+      summary: Get all Pet Tags
+      operationId: getPetTags
+      x-lz-gencall: TagRepo.ListAsync(callerInfo)
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+  '/pet/{petId}':
+    get:
+      summary: Find pet by ID
+      description: Returns a single pet
+      operationId: getPetById
+      x-lz-gencall: PetRepo.ReadAsync(callerInfo, petId)
+      parameters:
+      - name: petId
+        in: path
+        description: ID of pet to return
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        400:
+          description: Invalid ID supplied
+        404:
+          description: Pet not found
+    delete:
+      summary: Deletes a pet
+      operationId: deletePet
+      x-lz-gencall: PetRepo.DeleteAsync(callerInfo, petId)
+      parameters:
+      - name: petId
+        in: path
+        description: Pet id to delete
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: Success
+        400:
+          description: Invalid ID supplied
+        404:
+          description: Pet not found
   '/order/{orderId}':
     get:
       summary: Find purchase order by ID
       description: For valid response try integer IDs with value >= 1 and <= 10.\ \ Other values will generated exceptions
       operationId: getOrderById
-      x-lz-gencall: orderRepo.ReadAsync(callerInfo, orderId)
+      x-lz-gencall: OrderRepo.ReadAsync(callerInfo, orderId)
       parameters:
       - name: orderId
         in: path
@@ -269,7 +370,7 @@ paths:
     delete:
       summary: Delete purchase order by ID
       operationId: deleteOrder
-      x-lz-gencall: orderRepo.DeleteAsync(callerInfo, orderId)
+      x-lz-gencall: OrderRepo.DeleteAsync(callerInfo, orderId)
       parameters:
       - name: orderId
         in: path
@@ -284,12 +385,12 @@ paths:
           description: Invalid ID supplied
         404:
           description: Order not found
-  '/pet/{petId}':
+  '/public/pet/{petId}':
     get:
       summary: Find pet by ID
       description: Returns a single pet
       operationId: getPetById
-      x-lz-gencall: petRepo.ReadAsync(callerInfo, petId)
+      x-lz-gencall: PetRepo.ReadAsync(callerInfo, petId)
       parameters:
       - name: petId
         in: path
